2006-11-10  David Gilbert  <david.gilbert@object-refinery.com>

	* java/util/Collections.java
	(sort(List)): Minor API doc addition,
	(sort(List, Comparator)): Likewise.

2006-11-10  David Fu  <fchoong@netbeans.jp>

	* javax/swing/text/html/HTMLWriter.java
	(traverse): Removed Classpath specific handling of implied
	tags.
	(traverseHtmlFragment): Removed Classpath specific handling of
	implied	tags.

2006-11-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/ParagraphView.java
	(Row.getMaximumSize): Removed. This method is not necessary.
	* javax/swing/text/html/TableView.java
	(CellView): Moved attribute init to setPropertiesFromAttributes().
	(setPropertiesFromAttributes): Fetch attributes here.
	(RowView.RowView): Documented.
	(RowView.getMaximumSpan): Overridden to restrict the max span
	in the Y direction.
	(RowView.layoutMajorAxis): Correctly layout the spans.
	(columnWidths): New field. Stores the width attributes of
	the columns.
	(calculateColumnRequirements): Added support for relative
	 (== percent) width attributes.
	(calculateMajorAxisRequirements): Removed.
	(calculateMinorAxisRequirements): Removed unnecessary code.
	(getMaximumSpan): Overridden to restrict the table's width.
	(layoutColumns): Documented. Implement more clever table layout,
	i.e. for relative columns etc.
	(layoutMinorAxis): Don't mark rows invalid.
	(updateGrid): Added docs. Initialize column widths.

2006-11-09  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/headless/HeadlessGraphicsEnvironment,
	* gnu/java/awt/peer/headless/HeadlessToolkit: New classes.
	Implement basic headless toolkit.
	* java/awt/Toolkit.java
	(getDefaultToolkit): Check headless property and create
	headless toolkit when true.

2006-11-09  Ingo Proetel  <proetel@aicas.com>
2006-11-09  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/swing/SwingButtonPeer.java
	(SwingButton.button): New field.
	(SwingButton.SwingButton): Added constructor.