@@ -1,3 +1,8 @@
+2006-11-10  Roman Kennke  <kennke@aicas.com>
+
+	* javax/swing/text/View.java
+	(updateLayout): Only repaint when needed.
+
 2006-11-10  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* java/util/Collections.java
